Using z-index to hide images rather than display: none to ensure images load in Firefox. Reduced the number of pre-loaded images.

--- a/main.css
+++ b/main.css
@@ -6,15 +6,17 @@ div { padding: 0; margin: 0 }
   background: none no-repeat center center fixed; 
   background-color: black;
   background-size: cover;
-  display: none;
+  position: absolute; top: 0;
+  z-index: 0;
 }
 #mainImg .img.active {
-  display: block;
+  z-index: 10;
 }
 
 #forwards {
   width: 60%; height: 80%;
   position: absolute; top: 10%; left: 20%;
+  z-index: 20;
 }
 #forwards.active {
   background-color: green; opacity: 0.5;
@@ -24,6 +26,7 @@ div { padding: 0; margin: 0 }
 #left {
   width: 20%; height: 80%;
   position: absolute; left: 0; top: 10%;
+  z-index: 20;
 }
 #left.active {
   background-color: red; opacity: 0.5;
@@ -33,6 +36,7 @@ div { padding: 0; margin: 0 }
 #right {
   width: 20%; height: 80%;
   position: absolute; right: 0; top: 10%;
+  z-index: 20;
 }
 #right.active {
   background-color: blue; opacity: 0.5;
